<resources>
    <string name="app_name">Valentina</string>
    <string name="hello_world">Hello world!</string>

    <string name="password">Password</string>
    <string name="password_label">Please enter your password to see message:</string>

    <string name="old_password">Old password</string>
    <string name="old_password_label">Please enter your old password below:</string>

    <string name="new_password">New password</string>
    <string name="new_password_label">Please first enter your new password:</string>

    <string name="change_password">Change password</string>
    <string name="change_password_label">Or you can change your password:</string>

    <string name="new_change_password">New password</string>
    <string name="new_change_password_label">Change and enter your new password:</string>

    <string name="reset">Reset</string>
    <string name="reset_label">Or reset password and message:</string>

    <string name="message">Message</string>

    <string name="change_message">Change message</string>
    <string name="change_message_label">You can edit your message below:</string>

    <string name="save_message">Save message</string>
    <string name="save_message_label">Please save your message below:</string>

    <string name="no_message">No message.</string>
    <string name="see">See message</string>
    <string name="see_fingerprint">See message using fingerprint</string>
    <string name="see_fingerprint_label">Or use fingerprint instead password</string>

    <string name="back">Back</string>
    <string name="close">Close</string>
    <string name="submit">Submit</string>

    <string name="fail_password_title">Fail</string>
    <string name="fail_password_message">Invalid password.</string>

    <string name="touch_sensor_title">Fringerprint</string>
    <string name="touch_sensor_label">Confirm fringerprint to continue.</string>
    <string name="touch_sensor">Touch sensor</string>
    <string name="notSupport">This devise does not support fingerprint technology.</string>
</resources>
