<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollbars="none" >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@color/white">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/change_password"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/old_password_label"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/old_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:maxLines="1"
            android:background="@color/light"
            android:gravity="center_vertical"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="20sp" />


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/new_password_label"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/new_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:maxLines="1"
            android:background="@color/light"
            android:gravity="center_vertical"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="20sp" />

        <Button
            android:text="@string/submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_submit"
            android:background="@color/colorButton"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:layout_alignParentRight="true"
            android:drawableLeft="@android:drawable/ic_menu_edit"
            tools:ignore="ObsoleteLayoutParam,RtlHardcoded" />

        <Button
            android:text="@string/back"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_back"
            android:background="@color/colorSecondary"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@android:drawable/ic_menu_revert"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>
</ScrollView>
