<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/textViewMessage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:padding="20dp"
                android:textSize="35sp"
                android:textAlignment="center"
                android:text="@string/message"  />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:layout_margin="10dp"
                android:text="@string/no_message"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17sp" />

            <Button
                android:text="@string/change_message"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_submit"
                android:background="@color/colorButton"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:layout_alignParentRight="true"
                android:drawableLeft="@android:drawable/ic_menu_edit"
                tools:ignore="ObsoleteLayoutParam,RtlHardcoded" />

            <Button
                android:text="@string/back"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_back"
                android:background="@color/colorSecondary"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:drawableLeft="@android:drawable/ic_menu_revert"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>