<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/change_message"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.student.myapplication.ChangeMessage">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/change_message_header"
                android:text="@string/change_message"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:padding="20dp"
                android:textSize="35sp"
                android:textAlignment="center"  />


            <TextView
                android:id="@+id/change_message_textview"
                android:text="@string/change_message_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_margin="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/change_message_edittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:maxLines="5"
                android:layout_margin="10dp"
                android:background="@color/light"
                android:gravity="center_vertical"
                android:hint="@string/message"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:textSize="20sp" />


            <Button
                android:id="@+id/change_message_button"
                android:text="@string/change_message"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorButton"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:layout_alignParentRight="true"
                android:drawableLeft="@android:drawable/ic_menu_edit"
                tools:ignore="ObsoleteLayoutParam,RtlHardcoded" />

            <Button
                android:id="@+id/back_button_from_change_message"
                android:text="@string/back"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorSecondary"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:drawableLeft="@android:drawable/ic_menu_revert"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
